# top_system

./: CMakeLists.txt  figures.cpp  figures.h  main.cpp  readme
SFML/lib/: libsfml-audio.so.3.0.0  libsfml-graphics.so.3.0.0  libsfml-network.so.3.0.0  libsfml-system.so.3.0.0  libsfml-window.so.3.0.0
SFML/lib/cmake/SFML/: SFMLSharedTargets-release.cmake
SFML/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
